<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

   <!-- Package information: -->
   <name>serial_link_action_server</name>
   <version>0.0.0</version>
   <description>Action server for controlling serial link robots.</description>
   <maintainer email="jonathan.woolfrey@gmail.com">Woolfrey</maintainer>
   <license>GNU General Public Licence GPLv3</license>

   <!-- Basic requirements to build: -->
   
   <buildtool_depend>ament_cmake</buildtool_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>

   <export>
     <build_type>ament_cmake</build_type>
   </export>
 
   <depend>action_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend> 
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>

    <!-- These are needed to generate custom .msg and .action files -->
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>   
   
</package>
